--- a/fluentd-daemonset-tech.yaml
+++ b/fluentd-daemonset-tech.yaml
@@ -34,6 +34,10 @@ spec:
           # don't do this in production!! ^^
           - name: FLUENT_UID
             value: "0"
+          - name: FLUENTD_SYSTEMD_CONF
+            value: 'disable'
+          - name: FLUENTD_PROMETHEUS_CONF
+            value: 'disable'            
         resources:
           limits:
             memory: 200Mi
