modified:   k8s/deploy.sh 	modified:   k8s/fluentd-daemonset.yaml 	modified:   minikube.sh

--- a/k8s/fluentd-daemonset.yaml
+++ b/k8s/fluentd-daemonset.yaml
@@ -1,4 +1,37 @@
 ---
+# Trust the Elastic Cloud Root CA
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: elastic-cloud-ca-cert
+  namespace: default
+  labels:
+    k8s-app: fluentd-logging
+data:
+  elastic-root.pem: |-
+    -----BEGIN CERTIFICATE-----
+    MIIDLTCCAhWgAwIBAgIRALOA6qczzfBMwzJvT7KBEWowDQYJKoZIhvcNAQELBQAw
+    MDEZMBcGA1UECxMQbHc4bm40dzk0OWM4dHY2ejETMBEGA1UEAxMKcXVpY2tzdGFy
+    dDAeFw0xOTA1MjcxNTMzNDZaFw0yMDA1MjYxNTM0NDZaMDAxGTAXBgNVBAsTEGx3
+    OG5uNHc5NDljOHR2NnoxEzARBgNVBAMTCnF1aWNrc3RhcnQwggEiMA0GCSqGSIb3
+    DQEBAQUAA4IBDwAwggEKAoIBAQCzNK17PeKEN3Ik6hOm6JPi1LQdH3TutDe3yXQo
+    wb8V1c+6KSXkk7j0o5faGyqx57OZkC/yMhUWIZem/FwvaJt/h0kXKWor8QJ4w1UG
+    4ev6pr/e5MFpuNIBZ3P213UWHQ5ToxZ1vHMxzQoXoWOt9NBAJLYi2/y7eJj7KRRc
+    DdkA7uRHXmJ/0WXjNrJs224RukhVKCJIFSNJ5qxLIoMbTQ0ox/malslDsOg3NVee
+    OfaOAOuf4XirCgTaWjpB6GNRdXn7tdvziwFqxC27IMxXz+Plo9KMV96KUReSjLne
+    UW1fw07nzFkMjIakJk+EPEjOlT4qSejPz6/lkgRL4jPCqRJBAgMBAAGjQjBAMA4G
+    A1UdDwEB/wQEAwIChDAdBgNVHSUEFjAUBggrBgEFBQcDAQYIKwYBBQUHAwIwDwYD
+    VR0TAQH/BAUwAwEB/zANBgkqhkiG9w0BAQsFAAOCAQEATqZyP++ZnowlvCdF8m2d
+    BPySeVFaLR908aUKusqdP1fyuEWBF8OY+6eCe8Qqf0YviZuVrDvs8aid6ZvHI/H6
+    nztdgSKTKRmsh+BewzLOzwQcZJGyHMReCSZLfz3/9gYYl0tni4Gch12+SqidWHhR
+    GhKTJZhMTWN2WVzFN568tqKCrXa7s5RHcl74vHu90NAeHRbbe49Z0pTXiIr2YC8J
+    mpqi7Mj1MJnptu9DA2wu2abDKOrUIHRPI3JdHp1Ykv4zI6t/ht974zpErFeTdadI
+    tuu8DCrKWD7Yjqwt9kiEt4cdL5fAh/mkLCtFasSHrVFaiNBPSFmynbj8hwDMx6ol
+    Ew==
+    -----END CERTIFICATE-----
+---
+# Allow customizing fluentd configs
+# todo: add */conf.d/* additional configs
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -208,7 +241,7 @@ spec:
           - name: FLUENT_ELASTICSEARCH_USER
             value: "elastic"
           - name: FLUENT_ELASTICSEARCH_PASSWORD
-            value: tz8gnpnmz6lp54x78qqcr2bt
+            value: 8n9cmmfpqt8hrv48l626rh65 
           - name: FLUENT_ELASTICSEARCH_SCHEME
             value: "https"
           - name: FLUENT_ELASTICSEARCH_SSL_VERSION
@@ -240,6 +273,9 @@ spec:
         - name: varlibdockercontainers
           mountPath: /var/lib/docker/containers
           readOnly: true
+        - name: elastic-cloud-ca-cert
+          mountPath: "/etc/ssl/certs"
+          readOnly: true
       terminationGracePeriodSeconds: 30
       volumes:
       - name: config
@@ -252,6 +288,10 @@ spec:
       - name: varlibdockercontainers
         hostPath:
           path: /var/lib/docker/containers
+      - name: elastic-cloud-ca-cert
+        configMap:
+          defaultMode: 0600
+          name: elastic-cloud-ca-cert
 ---
 apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: ClusterRoleBinding
