modified:   k8s/fluentd-daemonset.yaml

--- a/k8s/fluentd-daemonset.yaml
+++ b/k8s/fluentd-daemonset.yaml
@@ -323,10 +323,10 @@ data:
       @type tail
       path /var/log/vmware-vmsvc.log
       pos_file /var/log/vmware-vmsvc.log.pos
-      <parse>
-        @type syslog
-      </parse>
       tag vmware.vmsvc.stuff
+      <parse>
+        @type none
+      </parse>
     </source>
 
 ---
