new file:   k8s-fluentbit-es-all-in-one.yaml 	modified:   k8s/auditbeat-kubernetes.yaml 	modified:   k8s/filebeat-daemonset.yaml 	deleted:    k8s/fluentbit/fluent-bit-configmap.yaml 	deleted:    k8s/fluentbit/fluent-bit-ds-minikube.yaml 	deleted:    k8s/fluentbit/fluent-bit-ds.yaml 	deleted:    k8s/fluentbit/fluent-bit-role-binding.yaml 	deleted:    k8s/fluentbit/fluent-bit-role.yaml 	deleted:    k8s/fluentbit/fluent-bit-service-account.yaml 	deleted:    k8s/fluentbit/go.sh 	new file:   k8s/fluentd-daemonset-cloud.yaml 	renamed:    k8s/fluentd-daemonset.yaml -> k8s/fluentd-daemonset-minikube.yaml 	renamed:    k8s/all-in-one-EFK-dev-cluster.yaml -> minikube/all-in-one-EFK-dev-cluster.yaml 	renamed:    k8s/deploy.sh -> minikube/deploy.sh 	renamed:    minikube.sh -> minikube/minikube.sh 	modified:   vms-non-k8s-hosts/filebeat.yml 	modified:   vms-non-k8s-hosts/metricbeat.yml

--- a/k8s/auditbeat-kubernetes.yaml
+++ b/k8s/auditbeat-kubernetes.yaml
@@ -84,7 +84,7 @@ spec:
         - name: ELASTICSEARCH_USERNAME
           value: elastic
         - name: ELASTICSEARCH_PASSWORD
-          value: tz8gnpnmz6lp54x78qqcr2bt 
+          value: - 
         # env:
         # - name: ELASTICSEARCH_HOST
         #   value: elasticsearch
